6.12
    - Eliminating xsubpp_version().  No longer relevant.  It was checking
      for a feature added to xsubpp before 5.003_07 and doing it in a
      really bizarre way.

6.11 Thu Jul 24 01:24:37 PDT 2003
    - Small grammatical doc touch up by Sean Burke
    - Making basic.t clean up better after itself so it can be run
      twice without setting up and cleaning up Big-Dummy again.
    * Noting where to find make in the README
    * Noting that MakeMaker does not produce a GNU make compatible Makefile
      on Windows.
    * 6.10_08 with a new version #.

6.10_08 Mon Jul 21 18:17:06 PDT 2003
    * $Config{installvendorman*dir} was being ignored and our default
      always used. [rt.cpan.org #2949]
    * Setting NORECURS to true was still resulting in a Makefile which
      tried to recurse into subdirectories which contained a Makefile.PL
      (it simply wouldn't have run them to generate Makefile's).
      This appears to be a rather old bug.
      [rt.cpan.org #2951]
    * [rt.perl.org #4345] Arguments passed to WriteMakefile() would get
      stopped upon by $self->{PARENT} in recursive builds in the process
      of prepending a .. onto it.
    - Command.t now using its own temp directory when testing 
      expand_wildcards() so no stray files confuse it.
    * No longer warning about 'postamble' attribute.
    - Added installvars() to list INSTALL* variables so we don't keep
      repeating the list all over the code.
    - Added init_DEST() to create DESTINSTALL* variables for installing
      with DESTDIR set.
    * DESTDIR + PREFIX now does not duplicate DESTDIR.  [Redhat #91892
      and part of rt.cpan.org #2954]
    * DESTDIR is now not directly prepended to the INSTALL* variables.
      installation targets now use DESTINSTALL* instead.  This prevents
      the DESTDIR from showing up in places it shouldn't like perllocal.pod.
      DESTDIR is still appearing in .packlist (bug). [rt.cpan.org #2954]