@@ -1,4 +1,9 @@
 6.12
+    - Reversing "realclean was duplicating work already done by clean"
+      (CVS 1.124 MM_Unix.pm).  Turns out it wasn't a duplication and this
+      was causing INST_* files to be left behind if your INST_LIB wasn't
+      blib/* as in the perl core.  realclean now removes the files copied
+      to INST_*.
     - Eliminating xsubpp_version().  No longer relevant.  It was checking
       for a feature added to xsubpp before 5.003_07 and doing it in a
       really bizarre way.
